# hound

./: .gitignore  Cargo.toml  build.rcl  contributing.md
examples/: convert_to_mono.rs  cpal.rs
src/: lib.rs  read.rs  write.rs
